--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Assets/Scripts/Explosion.cs" />
     <Compile Include="Assets/Scripts/DialogueCue/DialogueCueIfHaveEnough.cs" />
     <Compile Include="Assets/MazeGenerator/Scripts/RecursiveTreeMazeGenerator.cs" />
+    <Compile Include="Assets/StandInTheSun.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets/Samples/Terrain Tools/0.1.0-preview/Terrain Assets/ThirdPartyNotices.txt" />
